# MMIDAS_LC-NE

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  train_aug_mixvae.py  train_augmenter.py  train_augmneter.py  train_mixvae.py
data/: high_var_genes.csv  high_var_genes_perbatch.csv  variable_genes.csv
mmidas/: aug_networks.py  cplMixVAE.py  eval.py  networks_aug.py  networks_mixvae.py  nn_model.py  train_models.py  vaegan.py  vaegan_.py
mmidas/augmentation/: dataloader.py  udagan.py
mmidas/utils/: analysis_cells_tree.py  analysis_tree_helpers.py  augmentation.py  batch_removal.py  celltype_hierarchy.py  cluster_analysis.py  data_tools.py  dataloader.py  taxonomy.py  tools.py  tree_based_analysis.py
notebooks/: 00a_prepare_data_for_mmidas.ipynb  00b_two_arms_multiseed.ipynb  10_validate_mixvae_Dbh_Sdim_3.ipynb  10_validate_mixvae_Retroseq_Sdim_3.ipynb  1_exploring_dataset.ipynb  1_validate_augmenter.ipynb  2_validate_augmenter.ipynb  2_validate_mmidas.ipynb  3_validate_mixvae.ipynb  4_validate_retroSeq.ipynb  5_combining_alldata.ipynb  6_validate_mixvae_all.ipynb  7_validate_mixvae_DbhRetroseq.ipynb  7_validate_mixvae_DbhRetroseq_Sdim_3.ipynb  7_validate_mixvae_DbhRetroseq_Sdim_5.ipynb  8_validate_mixvae_RetroseqDbh.ipynb  8_validate_mixvae_RetroseqDbh_Sdim_3.ipynb  8_validate_mixvae_RetroseqDbh_Sdim_5.ipynb  9_combining_augRetro_Dbh.ipynb  data.pkl  retroseq_imp_genes.csv
scripts/: train_aug_mixvae.sh  train_mixvae.sh  train_mixvae_slurmarray.sh
train/: train_aug_mmidas.py  train_augmenter.py  train_mmidas.py
train/scripts/: train_mmidas.sh
