# -----------------------------------------------------------------------------
[project]
name = "LC-NE-MixRep"
version = "0.1.1"
requires-python = ">= 3.9"
#requires-pytorch = ">= 2.0"

readme = "README.md"

# -----------------------------------------------------------------------------
[paths]
main_dir = "./"
saving_path = "results"
data_path = "data"
models = "models"

# -----------------------------------------------------------------------------
[data]
Dbh_file = "Dbh_cluster.h5ad"
multiome_Dbh_file = "multiome_LC-NE_Dbh_cluster.h5ad"
Retroseq_file = "retroSeq.h5ad"
Dbh_Retroseq_file = "Dbh_Retroseq_logcpm.h5ad"
Retroseq_Dbh_file = "Retroseq_Dbh_logcpm.h5ad"
Dbh_Retroseq_nobr_file = "Dbh_Retroseq_nobr.h5ad"
hvg_Dbh_file = "high_var_genes_perbatch.csv"
hvg_all_file = "hvg_perdataset.csv"
hvg_Dbh_seurat = "variable_genes.csv"
# -----------------------------------------------------------------------------
[models]
augmenter_Dbh_Retroseq = "RNA_augmenter_Dbh_Retroseq_file_2025-02-05-11-21-27.pth"
augmenter_Retroseq_Dbh = "RNA_augmenter_Retroseq_Dbh_file_2025-02-05-11-25-10.pth"
augmenter_Dbh_Retroseq_nobr = "RNA_augmenter_Dbh_Retroseq_nobr_2025-02-06-15-00-51.pth"
augmenter_Dbh_Retroseq_binary = ""


